# HDD-Tool

./: .gitignore  ADVANCED_FEATURES.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_UI_DESIGN.md  BUILD_STATUS.md  COMPLETE_GUIDE.md  Cargo.toml  DEVICE_ARCHITECTURE.md  LINUX_DISTRIBUTION_GUIDE.md  LINUX_EXECUTABLE_GUIDE.md  LINUX_EXECUTABLE_SUCCESS.md  LINUX_RELEASE_SUMMARY.md  NIST_800-88_WORKFLOW.md  NIST_SP_800-88_Compliance_Analysis.md  NIST_SP_800-88_FINAL_COMPLIANCE_VERIFICATION.md  PHASE2_CORE_ENGINE.md  README.md  SERVER_SETUP_GUIDE.md  UBUNTU_SERVER_SETUP.md  WORKFLOW_REVIEW.md  build-desktop.ps1  build_linux.sh  create-distribution.sh  create_linux_package.sh  deploy.sh  hdd-tool-enhanced  hdd-tool-linux  prompt-description.md  run-linux.sh  sanitization_report_20250924_210413.txt  sanitization_report_20250924_210415.txt  test_certificate.rs  ubuntu-setup.sh  users.json  workflow_chart.html  workflow_diagram.json  workflow_mermaid.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
safewipe-engine/: Cargo.toml  README.md
safewipe-engine/src/: device.rs  lib.rs  main.rs  report.rs  sanitization.rs  sdk.rs  util.rs  verify.rs  wipe.rs
safewipe-gui/: README.md  package-lock.json  package.json
safewipe-gui/public/: main.js
safewipe-gui/src/: App.tsx
safewipe-gui/src-tauri/: Cargo.toml  tauri.conf.json
safewipe-gui/src-tauri/src/: lib.rs  main.rs
safewipe-gui/src/api/: devices.ts  report.ts  settings.ts  wipemethod.ts
safewipe-gui/src/components/: ConfirmationDialog.tsx  Navigation.tsx
safewipe-gui/src/screens/: Dashboard.tsx  DeviceSelection.tsx  Report.tsx  Settings.tsx  Verification.tsx  WipeMethod.tsx  WipeProgress.tsx
safewipe-sdk/: Cargo.toml
safewipe-sdk/src/: ffi.rs  lib.rs
scripts/: README.md  build-release.bat  build-release.sh
src/: advanced_wiper.rs  ata_commands.rs  auth.rs  config.rs  examples.rs  hpa_dco.rs  lib.rs  main.rs  main_fixed.rs  platform.rs  sanitization.rs  validation.rs
src/core/: config.rs  engine.rs  mod.rs  types.rs
src/devices/: mod.rs
src/devices/hdd/: mod.rs
src/devices/nvme/: mod.rs
src/devices/sdcard/: mod.rs
src/devices/ssd/: mod.rs
src/devices/usb/: mod.rs
src/hardware/: drive_interface.rs  mod.rs  sanitizer.rs
src/reporting/: audit.rs  compliance.rs  mod.rs
src/security/: certificate.rs  mod.rs  report_generator.rs
src/server/: api.rs  client.rs  database.rs  mod.rs  models.rs
src/ui/: logo.rs  mod.rs  themes.rs  widgets.rs
web/: README.md  index.html  package.json
web/public/: index.html
web/src/: App.js  index.css
web/src/components/: DeviceList.js  Header.js  OperationMonitor.js  SanitizeWizard.js  Sidebar.js
web/src/context/: DeviceContext.js
web/src/services/: api.js
