[package]
name = "hdd_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.29"   # egui + app framework
nix = "0.29"      # for Linux syscalls
rand = "0.8"      # for cryptographic random data generation
chrono = { version = "0.4", features = ["serde"] }  # for timestamps in certificates
num_cpus = "1.16"  # for optimal thread count detection
rayon = "1.8"      # for parallel processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rsa = "0.9"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
printpdf = "0.6"
hex = "0.4"
ring = "0.17"
x509-parser = "0.15"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Ioctl",
] }