[package]
name = "safewipe-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }   # JSON reports
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }    # CLI args
tokio = { version = "1", features = ["full"] }       # async ops
anyhow = "1.0"                                       # error handling
thiserror = "1.0"
chrono = "0.4.42"                                    # custom errors
