[package]
name = "safewipe-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }   # JSON reports
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }    # CLI args
tokio = { version = "1", features = ["full"] }       # async ops
anyhow = "1.0"                                       # error handling
thiserror = "1.0"                                    # custom errors
chrono = { version = "0.4.42", features = ["serde"] } # datetime with serde support
sysinfo = "0.30"                                     # system and drive info
uuid = { version = "1.0", features = ["v4"] }       # unique identifiers
rand = "0.8"                                         # random data generation

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winioctl", "fileapi", "handleapi", "ioapiset"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
