[package]
name = "safewipe-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
safewipe-engine = { path = "../safewipe-engine" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

[lib]
crate-type = ["lib"]
