[package]
name = "safewipe_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "safewipe_tauri"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.4.1" }

[dependencies]
tauri = "2"
safewipe-sdk = { path = "../../safewipe-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-log = "2"
