[package]
name = "safewipe-gui"
version = "0.1.0"
description = "SafeWipe - Secure Data Wiping GUI Application"
authors = ["SafeWipe Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "safewipe_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Local dependencies
safewipe-sdk = { path = "../../safewipe-sdk" }
